ENH: EMSegment - Added Qt module skeleton
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14138 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/QTModules/CMakeLists.txt
+++ b/QTModules/CMakeLists.txt
@@ -18,11 +18,12 @@ INCLUDE(${Slicer3_CMAKE_DIR}/Slicer3QTModuleMacros.cmake)
 
 SET(qtmodules
   Annotation
-  SlicerWelcome
-  Volumes
+  EMSegment
   Measurements
+  SlicerWelcome
   TractographyDisplay
   TractographyFiducialSeeding
+  Volumes
   )
 
 FOREACH(module ${qtmodules})
