ENH: Add custom colors to the qMRMLROIWidget handles
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14147 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qMRMLWidgets/CMakeLists.txt
+++ b/Libs/qMRMLWidgets/CMakeLists.txt
@@ -42,6 +42,8 @@ SET(qMRMLWidgets_SRCS
   qMRMLNodeComboBox.h
   qMRMLNodeFactory.cxx
   qMRMLNodeFactory.h
+  qMRMLRangeWidget.cxx
+  qMRMLRangeWidget.h
   qMRMLROIWidget.cxx
   qMRMLROIWidget.h
   qMRMLSceneCategoryModel.cxx
@@ -88,6 +90,7 @@ SET(qMRMLWidgets_MOC_SRCS
   qMRMLMatrixWidget.h
   qMRMLNodeComboBox.h
   qMRMLNodeFactory.h
+  qMRMLRangeWidget.h
   qMRMLROIWidget.h
   qMRMLSceneCategoryModel.h
   qMRMLSceneColorTableModel.h
