COMP: AnnotationModule - Exclude missing file vtkMRMLAnnotationFiducialDisplayableManager.cxx from CMakeLists.txt to remove build errors.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14175 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/QTModules/Annotation/CMakeLists.txt
+++ b/QTModules/Annotation/CMakeLists.txt
@@ -15,7 +15,7 @@ SET(qt_module_include_directories
 # DisplayableManager classes
 SET(DisplayableManager_SRCS
   vtkMRMLAnnotationTextDisplayableManager.cxx
-  vtkMRMLAnnotationFiducialDisplayableManager.cxx
+  #vtkMRMLAnnotationFiducialDisplayableManager.cxx
   )
 
 # Create the instantiator for DisplayableManager classes.
