STYLE: Update comment in QTModules/*/CMakeLists.txt
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14213 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/QTModules/Annotation/CMakeLists.txt
+++ b/QTModules/Annotation/CMakeLists.txt
@@ -6,7 +6,7 @@ SET(qt_module_title "Annotation")
 
 SET(qt_module_export_directive "Q_SLICER_QTMODULES_ANNOTATIONS_EXPORT")
 
-# Additional directories to include
+# Additional includes - Current_{source,binary} and Slicer3_{Libs,Base} already included
 SET(qt_module_include_directories
   ${CMAKE_CURRENT_SOURCE_DIR}/Widgets
   ${CMAKE_CURRENT_SOURCE_DIR}/MRML
