--- a/QTModules/ModuleTemplate/CMakeLists.txt
+++ b/QTModules/ModuleTemplate/CMakeLists.txt
@@ -1,15 +1,13 @@
-# --------------------------------------------------------------------------
+
 # Add subdirectories
-
 ADD_SUBDIRECTORY(Logic)
-
 
 # Module name (usually identique to the directory name)
 SET(qt_module_name "ModuleTemplate")
 
 SET(qt_module_export_directive "Q_SLICER_QTMODULES_MODULETEMPLATE_EXPORT")
 
-# Additional directories to include
+# Additional includes - Current_{source,binary} and Slicer3_{Libs,Base} already included
 SET(qt_module_include_directories
   ${CMAKE_CURRENT_SOURCE_DIR}/Widgets
   ${CMAKE_CURRENT_BINARY_DIR}/Widgets
