ENH: Added qMRMLSliceInformationWidget
After a MRMLSliceNode is set, the widget will observe it and display the
following properties:
 - LayoutName, Orientation, SliceVisibility, WidgetVisibility, Dimension,
FieldOfView, LightboxLayout, SliceSpacingMode and PrescribedSpacing

It also gives the user the possibility to update properties like:
 - orientation, sliceVisiblity, widgetVisibility, sliceSpacingMode and
prescribedSpacing

git-svn-id: http://svn.slicer.org/Slicer3/trunk@14231 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qMRMLWidgets/CMakeLists.txt
+++ b/Libs/qMRMLWidgets/CMakeLists.txt
@@ -61,6 +61,9 @@ SET(qMRMLWidgets_SRCS
   qMRMLSliceControllerWidget.cxx
   qMRMLSliceControllerWidget.h
   qMRMLSliceControllerWidget_p.h
+  qMRMLSliceInformationWidget.cxx
+  qMRMLSliceInformationWidget.h
+  qMRMLSliceInformationWidget_p.h
   qMRMLSliceViewWidget.cxx
   qMRMLSliceViewWidget.h
   qMRMLSliceViewWidget_p.h
@@ -103,6 +106,8 @@ SET(qMRMLWidgets_MOC_SRCS
   qMRMLSceneTreeModel.h
   qMRMLSliceControllerWidget.h
   qMRMLSliceControllerWidget_p.h
+  qMRMLSliceInformationWidget.h
+  qMRMLSliceInformationWidget_p.h
   qMRMLSliceViewWidget.h
   qMRMLSliceViewWidget_p.h
   qMRMLSortFilterProxyModel.h
@@ -121,6 +126,7 @@ SET(qMRMLWidgets_UI_SRCS
   Resources/UI/qMRMLROIWidget.ui
   Resources/UI/qMRMLSceneFactoryWidget.ui
   Resources/UI/qMRMLSliceControllerWidget.ui
+  Resources/UI/qMRMLSliceInformationWidget.ui
   Resources/UI/qMRMLSliceViewWidget.ui
   Resources/UI/qMRMLTransformSliders.ui
   Resources/UI/qMRMLVolumeThresholdWidget.ui
