--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -656,6 +656,19 @@ IF (Slicer3_USE_KWWIDGETS)
     endif(Slicer3_BUILD_CLI)
   endif(Slicer3_BUILD_MODULES)
 ENDIF (Slicer3_USE_KWWIDGETS)
+
+#-----------------------------------------------------------------------------
+# Module EMSegment libraries
+# The EMSegment{Registration,Graph,Algorithm,MRML} libraries are built from the top-level
+# CMakeLists.txt. Doing so allow to build these libraries also if Slicer3_USE_KWWIDGETS is OFF
+
+if(Slicer3_BUILD_MODULES)
+  ADD_SUBDIRECTORY(Modules/EMSegment/Algorithm)
+  ADD_SUBDIRECTORY(Modules/EMSegment/MRML)
+  ADD_SUBDIRECTORY(Modules/EMSegment/Registration)
+  ADD_SUBDIRECTORY(Modules/EMSegment/Graph)
+endif()
+
 #-----------------------------------------------------------------------------
 # Qt Loadable Modules
 #
