COMP: Fix CMakeLists.txt related to EMSegment{Algorithm, Graph, MRML, Registration}
EMSegment now complies properly on Windows

git-svn-id: http://svn.slicer.org/Slicer3/trunk@14248 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/EMSegment/Algorithm/CMakeLists.txt
+++ b/Modules/EMSegment/Algorithm/CMakeLists.txt
@@ -9,17 +9,34 @@ MARK_AS_ADVANCED(CMAKE_BACKWARDS_COMPATIBILITY)
 # --------------------------------------------------------------------------
 # Find Slicer3
 
-if(NOT Slicer3_SOURCE_DIR)
-  find_package(Slicer3 REQUIRED)
-  include(${Slicer3_USE_FILE})
-  slicer3_set_default_install_prefix_for_external_projects()
-endif(NOT Slicer3_SOURCE_DIR)
+#if(NOT Slicer3_SOURCE_DIR)
+#  find_package(Slicer3 REQUIRED)
+#  #include(${Slicer3_USE_FILE})
+#  include(${Slicer3_CMAKE_DIR}/Slicer3Macros.cmake)
+#  slicer3_set_default_install_prefix_for_external_projects()
+#endif(NOT Slicer3_SOURCE_DIR)
+
+# --------------------------------------------------------------------------
+# Find VTK
+
+#if(NOT VTK_FOUND)
+#  find_package(VTK REQUIRED)
+#  include(${VTK_USE_FILE})
+#endif()
+
+# --------------------------------------------------------------------------
+# Find ITK
+
+if(NOT ITK_FOUND)
+  find_package(ITK REQUIRED)
+  include(${ITK_USE_FILE})
+endif(NOT ITK_FOUND)
 
 # --------------------------------------------------------------------------
 # Include dirs
 
 configure_file(
-  ${CMAKE_CURRENT_SOURCE_DIR}/vtkEMSegmentAlgorithmConfigure.h.in 
+  ${CMAKE_CURRENT_SOURCE_DIR}/vtkEMSegmentAlgorithmConfigure.h.in
   ${CMAKE_CURRENT_BINARY_DIR}/vtkEMSegmentAlgorithmConfigure.h
   )
 
@@ -28,13 +45,13 @@ include_directories(
   ${CMAKE_CURRENT_BINARY_DIR}
   )
 
-file(GLOB headers 
+file(GLOB headers
   "${CMAKE_CURRENT_SOURCE_DIR}/*.h"
   "${CMAKE_CURRENT_SOURCE_DIR}/*.txx"
   )
 
-install(FILES 
-  ${headers} 
+install(FILES
+  ${headers}
   "${CMAKE_CURRENT_BINARY_DIR}/vtkEMSegmentAlgorithmConfigure.h"
   DESTINATION ${Slicer3_INSTALL_MODULES_INCLUDE_DIR}/${PROJECT_NAME} COMPONENT Development
   )
@@ -42,7 +59,7 @@ install(FILES
 # --------------------------------------------------------------------------
 # Sources
 
-set(KIT_SRCS 
+set(KIT_SRCS
   EMLocalInterface.cxx
   EMLocalRegistrationCostFunction.cxx
   EMLocalShapeCostFunction.cxx
@@ -63,7 +80,7 @@ set(KIT_SRCS
   # vtkImageEMAtlasSuperClass.cxx
   # vtkImageEMMarkov.cxx
   )
-  
+
 set_source_files_properties(
   # Algorithm sources (temporary exclusion)
   EMLocalInterface.cxx
@@ -76,27 +93,47 @@ set_source_files_properties(
   vtkImageMeanIntensityNormalization.cxx
   WRAP_EXCLUDE
   )
-  
+
 # --------------------------------------------------------------------------
 # Wrapping
 
 include("${VTK_CMAKE_DIR}/vtkWrapTcl.cmake")
-vtk_wrap_tcl3(${PROJECT_NAME} 
-  KIT_TCL_SRCS 
+vtk_wrap_tcl3(${PROJECT_NAME}
+  KIT_TCL_SRCS
   "${KIT_SRCS}" "")
 
 # --------------------------------------------------------------------------
 # Build and install the library
 
 set(lib_name ${PROJECT_NAME})
-add_library(${lib_name} 
-  ${KIT_SRCS} 
+add_library(${lib_name}
+  ${KIT_SRCS}
   ${KIT_TCL_SRCS}
   )
 slicer3_set_modules_output_path(${lib_name})
 
+set(libs
+  ITKNumerics
+  )
+
+IF (VTK_WRAP_TCL)
+  SET(libs
+    ${libs}
+    vtkImagingTCL
+    vtkIOTCL
+    )
+ELSE (VTK_WRAP_TCL)
+  SET(libs
+    ${libs}
+    vtkCommon
+    vtkFiltering
+    vtkImaging
+    vtkIO
+    )
+ENDIF (VTK_WRAP_TCL)
+
 target_link_libraries(${lib_name}
-  #${MRML_LIBRARIES}
+  ${libs}
   )
 
 # Apply user-defined properties to the library target.
