--- a/Modules/EMSegment/MRML/CMakeLists.txt
+++ b/Modules/EMSegment/MRML/CMakeLists.txt
@@ -9,11 +9,11 @@ MARK_AS_ADVANCED(CMAKE_BACKWARDS_COMPATIBILITY)
 # --------------------------------------------------------------------------
 # Find Slicer3
 
-if(NOT Slicer3_SOURCE_DIR)
-  find_package(Slicer3 REQUIRED)
-  include(${Slicer3_USE_FILE})
-  slicer3_set_default_install_prefix_for_external_projects()
-endif(NOT Slicer3_SOURCE_DIR)
+#if(NOT Slicer3_SOURCE_DIR)
+#  find_package(Slicer3 REQUIRED)
+#  include(${Slicer3_USE_FILE})
+#  slicer3_set_default_install_prefix_for_external_projects()
+#endif(NOT Slicer3_SOURCE_DIR)
 
 # --------------------------------------------------------------------------
 # Include dirs
