ENH: EMSegment - Copied logic code from Modules to QTModules and commented KWWidgets/TCL code
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14250 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/QTModules/EMSegment/Logic/CMakeLists.txt
+++ b/QTModules/EMSegment/Logic/CMakeLists.txt
@@ -11,6 +11,12 @@ SET(module_logic_export_directive "VTK_SLICER_EMSEGMENT_MODULE_LOGIC_EXPORT")
 
 # Additional directories to include
 SET(module_logic_include_directories
+  ${EMSegmentAlgorithm_SOURCE_DIR}
+  ${EMSegmentAlgorithm_BINARY_DIR}
+  ${EMSegmentMRML_SOURCE_DIR}
+  ${EMSegmentMRML_BINARY_DIR}
+  ${EMSegmentRegistration_SOURCE_DIR}
+  ${EMSegmentRegistration_BINARY_DIR}
   )
 
 # Source files
@@ -20,7 +26,8 @@ SET(module_logic_SRCS
 
 # Additional Target libraries
 SET(module_logic_target_libraries
-  ${ITK_LIBRARIES}
+  EMSegmentMRML
+  EMSegmentRegistration
   )
 
 
