COMP: EMSegment - Added missing include directories to QTModules/EMSegment/CMakeLists.txt
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14251 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/QTModules/EMSegment/CMakeLists.txt
+++ b/QTModules/EMSegment/CMakeLists.txt
@@ -15,6 +15,8 @@ SET(qt_module_include_directories
   ${CMAKE_CURRENT_BINARY_DIR}/Widgets
   ${CMAKE_CURRENT_SOURCE_DIR}/Logic
   ${CMAKE_CURRENT_BINARY_DIR}/Logic
+  ${EMSegmentMRML_SOURCE_DIR}
+  ${EMSegmentMRML_BINARY_DIR}
   )
 
 # Source files
