COMP: EMSegment - Make sure EMSegment is build after EMSegment{Graph, Registration, Algorithm, MRML} and Volumes libraries
That should address the following issue:  http://www.cdash.org/CDash/viewBuildError.php?buildid=670245

git-svn-id: http://svn.slicer.org/Slicer3/trunk@14258 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -669,6 +669,15 @@ if(Slicer3_BUILD_MODULES)
   ADD_SUBDIRECTORY(Modules/EMSegment/Graph)
 endif()
 
+# Since EMSegment module expects Volume module and its associated library to be
+# built beforehand,let's enfore that by building EMSegment here.
+# Note that EMSegment has been commented in Modules/CMakeLists.txt
+IF (Slicer3_USE_KWWIDGETS)
+  if(Slicer3_BUILD_MODULES)
+    ADD_SUBDIRECTORY(Modules/EMSegment)
+  endif()
+ENDIF()
+
 #-----------------------------------------------------------------------------
 # Qt Loadable Modules
 #
