--- a/Modules/CMakeLists.txt
+++ b/Modules/CMakeLists.txt
@@ -70,7 +70,7 @@ SET(modules
 # MRAblation <- not working either
   ModelMirror
   ModelTransform
-  EMSegment
+  # EMSegment # EMSegment is build from the top-level cmake
   # DistanceTransformModel <- culled from slicer 3.6
   ClipModel
   Measurements
