--- a/Modules/EMSegment/CMakeLists.txt
+++ b/Modules/EMSegment/CMakeLists.txt
@@ -15,6 +15,12 @@ if(NOT Slicer3_SOURCE_DIR)
   slicer3_set_default_install_prefix_for_external_projects()
 endif(NOT Slicer3_SOURCE_DIR)
 
+
+find_package(GenerateLM REQUIRED)
+if(GenerateLM_FOUND)
+  include(${GenerateLM_USE_FILE})
+endif(GenerateLM_FOUND)
+
 # --------------------------------------------------------------------------
 # Include dirs
 
