ENH: Added class qSlicerStyle - Provide a way to fine-tune the application style
qSlicerStyle inherits from QCleanlooksStyle. By overloading the existing
virtual methods it's then possible to fine-tune the style.

git-svn-id: http://svn.slicer.org/Slicer3/trunk@14286 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Base/QTGUI/CMakeLists.txt
+++ b/Base/QTGUI/CMakeLists.txt
@@ -48,6 +48,8 @@ SET(KIT_SRCS
   qSlicerModuleSelectorWidget.h
   qSlicerSaveDataDialog.cxx
   qSlicerSaveDataDialog.h
+  qSlicerStyle.cxx
+  qSlicerStyle.h
   qSlicerWidget.cxx
   qSlicerWidget.h
   )
