COMP: Make sure EMSegment{Algo, Reg, MRML, Graph} lib compile properly when KWWidgets is OFF
 - Make sure Tcl wrapping code is excluded when KWWidgets is OFF
 - Include the corespinding subdirectory also when Slicer3_BUILD_QTLOADABLEMODULES is ON
 - Include Slicer3ModulesMacros.cmake

git-svn-id: http://svn.slicer.org/Slicer3/trunk@14308 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -668,7 +668,8 @@ ENDIF (Slicer3_USE_KWWIDGETS)
 # The EMSegment{Registration,Graph,Algorithm,MRML} libraries are built from the top-level
 # CMakeLists.txt. Doing so allow to build these libraries also if Slicer3_USE_KWWIDGETS is OFF
 
-if(Slicer3_BUILD_MODULES)
+if(Slicer3_BUILD_MODULES OR Slicer3_BUILD_QTLOADABLEMODULES)
+  include("${Slicer3_CMAKE_DIR}/Slicer3ModulesMacros.cmake")
   ADD_SUBDIRECTORY(Modules/EMSegment/Algorithm)
   ADD_SUBDIRECTORY(Modules/EMSegment/MRML)
   ADD_SUBDIRECTORY(Modules/EMSegment/Registration)
