--- a/Modules/EMSegment/Registration/CMakeLists.txt
+++ b/Modules/EMSegment/Registration/CMakeLists.txt
@@ -67,11 +67,13 @@ set_source_files_properties(
 
 # --------------------------------------------------------------------------
 # Wrapping
-
-include("${VTK_CMAKE_DIR}/vtkWrapTcl.cmake")
-vtk_wrap_tcl3(${PROJECT_NAME}
-  KIT_TCL_SRCS
-  "${KIT_SRCS}" "")
+set(KIT_TCL_SRCS)
+if(VTK_WRAP_TCL)
+  include("${VTK_CMAKE_DIR}/vtkWrapTcl.cmake")
+  vtk_wrap_tcl3(${PROJECT_NAME}
+    KIT_TCL_SRCS
+    "${KIT_SRCS}" "")
+endif()
 
 # --------------------------------------------------------------------------
 # Build and install the library
