ENH: Added vtkSliceViewInteractorStyle to MRMLDisplayableManager library
vtkSliceViewInteractorStyle is a copy of GUI/vtkSlicerInteractorStyle

git-svn-id: http://svn.slicer.org/Slicer3/trunk@14335 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/MRMLDisplayableManager/CMakeLists.txt
+++ b/Libs/MRMLDisplayableManager/CMakeLists.txt
@@ -69,6 +69,7 @@ SET(KIT_SRCS
   vtkMRMLDisplayableManagerFactory.cxx
   vtkMRMLDisplayableManagerGroup.cxx
   
+  vtkSliceViewInteractorStyle.cxx
   vtkThreeDViewInteractorStyle.cxx
   )
 
