ENH: Added weave to SuperBuild.
Weave is a Python library that allows C/C++ code to be "woven" into Python code.  This is usually done for performance reasons.  Weave has great integration with Numpy, and can be used to speed up image processing in Slicer3/Slicer4.


git-svn-id: http://svn.slicer.org/Slicer3/trunk@14346 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/SuperBuild/CMakeLists.txt
+++ b/SuperBuild/CMakeLists.txt
@@ -338,6 +338,7 @@ endif()
 set(CLAPACK_DEPENDENCIES)
 set(NUMPY_DEPENDENCIES CLAPACK python)
 set(scipy_DEPENDENCIES NUMPY)
+set(weave_DEPENDENCIES python NUMPY)
 
 set(VTK_DEPENDENCIES)
 set(CTK_DEPENDENCIES VTK)
@@ -369,6 +370,7 @@ if(Slicer3_USE_PYTHON OR Slicer3_USE_PYTHONQT)
   if(Slicer3_BUILD_NUMPY)
     include(External_CLAPACK)
     include(External_NUMPY)
+    include(External_weave)
     if(Slicer3_BUILD_SCIPY)
       include(External_SciPy)
     endif(Slicer3_BUILD_SCIPY)
