STYLE: Remove extra comments from QTModules/Measurements/CMakeLists.txt
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14349 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/QTModules/Measurements/CMakeLists.txt
+++ b/QTModules/Measurements/CMakeLists.txt
@@ -44,12 +44,8 @@ SET(qt_module_resources
 )
 
 # Additional Target libraries
-SET(qt_module_target_libraries ""
-  #${KWWidgets_LIBRARIES}
-  #${ITK_LIBRARIES}
-  #CommandLineModule
-  #SlicerTractographyDisplay
-  #SlicerTractographyFiducialSeeding
+SET(qt_module_target_libraries
+  ""
   )
 
 Slicer3_build_qtmodule(
