ENH:  Generate explicit static versions of the libraries, and force use of the static versions for the GenerateCLP program.  This works around a problem where proper {DY}LD_LIBRARY_PATH must be set (to initially non-existing paths) during the build processes in order to build SEM programs.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14354 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/SlicerExecutionModel/GenerateCLP/CMakeLists.txt
+++ b/Libs/SlicerExecutionModel/GenerateCLP/CMakeLists.txt
@@ -32,7 +32,7 @@ add_executable(GenerateCLP ${GENERATECLP_SOURCE})
 get_target_property(GenerateCLP_EXE_PATH GenerateCLP LOCATION)
 
 target_link_libraries(GenerateCLP
-  ModuleDescriptionParser
+  ModuleDescriptionParser-static
   itksys
   ITKEXPAT)
 
