--- a/Libs/SlicerExecutionModel/ModuleDescriptionParser/CMakeLists.txt
+++ b/Libs/SlicerExecutionModel/ModuleDescriptionParser/CMakeLists.txt
@@ -98,11 +98,17 @@ endif(USE_BFD)
 
 # --------------------------------------------------------------------------
 # Build and install the library
-
 set(lib_name ModuleDescriptionParser)
   add_library(${lib_name}
   ${ModuleDescriptionParser_SRCS}
 )
+
+## Always build an explicitly static library for linking against GenerateCLP so that
+## GenerateCLP can be run from CMake without having to set DYLD_LIBRARY_PATH or LD_LIBRARY_PATH
+## to the future location of of libModuleDescriptionParser.so
+add_library(${lib_name}-static STATIC
+  ${ModuleDescriptionParser_SRCS}
+  )
 
 set(link_libs
   ITKEXPAT
@@ -122,6 +128,7 @@ if(NOT WIN32 AND HAVE_BFD)
 endif(NOT WIN32 AND HAVE_BFD)
 
 target_link_libraries(${lib_name} ${link_libs})
+target_link_libraries(${lib_name}-static ${link_libs})
 
 # Apply user-defined properties to the library target.
 IF(Slicer3_LIBRARY_PROPERTIES)
