--- a/Libs/SlicerExecutionModel/ModuleDescriptionParser/Testing/CMakeLists.txt
+++ b/Libs/SlicerExecutionModel/ModuleDescriptionParser/Testing/CMakeLists.txt
@@ -9,11 +9,11 @@ MARK_AS_ADVANCED(CMAKE_BACKWARDS_COMPATIBILITY)
 
 set(PARSER1TEST_SOURCE Parser1Test )
 add_executable(Parser1Test ${PARSER1TEST_SOURCE})
-target_link_libraries(Parser1Test ModuleDescriptionParser )
+target_link_libraries(Parser1Test ModuleDescriptionParser-static )
 
 set(ModuleFactoryTest_SOURCE ModuleFactoryTest )
 add_executable(ModuleFactoryTest ${ModuleFactoryTest_SOURCE})
-target_link_libraries(ModuleFactoryTest ModuleDescriptionParser )
+target_link_libraries(ModuleFactoryTest ModuleDescriptionParser-static )
 
 include_directories(
   ${ModuleDescriptionParser_SOURCE_DIR}
